# fastapi-playground

./: .gitignore  README.md  database.py  db_models.py  docker-compose.yml  dockerfile  main.py  mocks.py  models.py  pyproject.toml
app/: main.py
app/api/: dependencies.py  main.py
app/api/routes/: chat_graph.py  chat_stream.py  health.py  react.py
app/core/: config.py  database.py
app/dependencies/: database.py  llm_client.py
app/mocks/: __init__.py  chat_session_mocks.py
app/models/: __init__.py  chat_session_models.py
app/orchestration/agents/: __init__.py  base.py  router_agent.py
app/orchestration/graphs/: __init__.py  main_graph.py  states.py
app/orchestration/services/: __init__.py  llm_service.py
app/services/: __init__.py  chat_stream_service.py  react_service.py  token_estimator.py
tests/: test_chat_stream_routes.py  test_react_routes.py
