[project]
name = "fastapi-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.43.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.29.0",
    "httpx>=0.24.0",
    "langchain>=0.0.300",
    "langgraph>=0.1.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]